// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-input-number t-size-m t-input-number--row"
    >
      <button
        class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
        type="button"
      >
        <svg
          class="t-icon t-icon-remove"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.5 7.35h9v1.3h-9v-1.3z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </button>
      <div
        class="t-input__wrap"
        value="100"
      >
        <div
          class="t-input t-size-m t-align-left t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="100"
          />
        </div>
      </div>
      <button
        class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
        type="button"
      >
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </button>
    </div>
    <div
      class="t-input-number t-size-m t-input-number--row"
    >
      <button
        class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
        type="button"
      >
        <svg
          class="t-icon t-icon-remove"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.5 7.35h9v1.3h-9v-1.3z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </button>
      <div
        class="t-input__wrap"
        value="200"
      >
        <div
          class="t-input t-size-m t-align-center t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="200"
          />
        </div>
      </div>
      <button
        class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
        type="button"
      >
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </button>
    </div>
    <div
      class="t-input-number t-size-m t-input-number--row"
    >
      <button
        class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
        type="button"
      >
        <svg
          class="t-icon t-icon-remove"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3.5 7.35h9v1.3h-9v-1.3z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </button>
      <div
        class="t-input__wrap"
        value="300"
      >
        <div
          class="t-input t-size-m t-align-right t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="300"
          />
        </div>
      </div>
      <button
        class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
        type="button"
      >
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </button>
    </div>
    <div
      class="t-input-number t-size-m t-input-number--normal"
    >
      <div
        class="t-input__wrap"
        value="100"
      >
        <div
          class="t-input t-size-m t-align-left t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="100"
          />
        </div>
      </div>
    </div>
    <div
      class="t-input-number t-size-m t-input-number--normal"
    >
      <div
        class="t-input__wrap"
        value="200"
      >
        <div
          class="t-input t-size-m t-align-center t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="200"
          />
        </div>
      </div>
    </div>
    <div
      class="t-input-number t-size-m t-input-number--normal"
    >
      <div
        class="t-input__wrap"
        value="300"
      >
        <div
          class="t-input t-size-m t-align-right t-is-default"
        >
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="300"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`auto-width.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row t-input-number--auto-width"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap t-input--auto-width"
      value="1"
    >
      <div
        class="t-input t-size-m t-align-center t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="1"
        />
        <span
          class="t-input__input-pre"
        >
          1
        </span>
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`center.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap"
      value="1"
    >
      <div
        class="t-input t-size-m t-align-center t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="1"
        />
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`default.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap"
      value="1"
    >
      <div
        class="t-input t-size-m t-align-center t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="1"
        />
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`format.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
    style="width: 150px;"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap"
      value="0%"
    >
      <div
        class="t-input t-size-m t-align-center t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="0%"
        />
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`left.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-is-controls-right t-input-number--column"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-chevron-down"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap"
      value="5"
    >
      <div
        class="t-input t-size-m t-align-left t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="5"
        />
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-chevron-up"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`normal.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--normal"
  >
    <div
      class="t-input__wrap"
      value="10"
    >
      <div
        class="t-input t-size-m t-align-left t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="10"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <div
        class="t-input-number t-size-s t-input-number--row"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="3"
        >
          <div
            class="t-input t-size-m t-align-center t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="3"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
      <div
        class="t-input-number t-size-m t-input-number--row"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="6"
        >
          <div
            class="t-input t-size-m t-align-center t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="6"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
      <div
        class="t-input-number t-size-l t-input-number--row"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="9"
        >
          <div
            class="t-input t-size-m t-align-center t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="9"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <div
        class="t-input-number t-size-s t-is-controls-right t-input-number--column"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-down"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="5"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="5"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-up"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
      <div
        class="t-input-number t-size-m t-is-controls-right t-input-number--column"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-down"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="5"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="5"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-up"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
      <div
        class="t-input-number t-size-l t-is-controls-right t-input-number--column"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-down"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input__wrap"
          value="10"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="10"
            />
          </div>
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-up"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <div
        class="t-input-number t-size-s t-input-number--normal"
      >
        <div
          class="t-input__wrap"
          value="5"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="5"
            />
          </div>
        </div>
      </div>
      <div
        class="t-input-number t-size-m t-input-number--normal"
      >
        <div
          class="t-input__wrap"
          value="5"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="5"
            />
          </div>
        </div>
      </div>
      <div
        class="t-input-number t-size-l t-input-number--normal"
      >
        <div
          class="t-input__wrap"
          value="10"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`status.jsx 1`] = `
<DocumentFragment>
  <div>
    <form
      class="t-form"
    >
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            禁用
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-is-disabled t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-is-disabled t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-is-disabled t-size-m t-align-center t-is-default"
                >
                  <input
                    class="t-input__inner"
                    disabled=""
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
              </div>
              <button
                class="t-input-number__increase t-is-disabled t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            只读
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-is-readonly t-size-m t-align-center t-is-default"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    readonly=""
                    type="text"
                    value="3"
                  />
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            正常
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-size-m t-align-center t-is-default"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            成功
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-size-m t-align-center t-is-success"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            警告
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-size-m t-align-center t-is-warning"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            错误
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-size-m t-align-center t-is-error"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            正常提示
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-size-m t-align-center t-is-default"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
                <div
                  class="t-input__tips t-input__tips--default"
                >
                  这是普通文本提示
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            正常提示
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-is-controls-right t-input-number--column"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-chevron-down"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-size-m t-align-left t-is-default"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
                <div
                  class="t-input__tips t-input__tips--default"
                >
                  这是普通文本提示
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-chevron-up"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            成功提示
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-size-m t-align-center t-is-success"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
                <div
                  class="t-input__tips t-input__tips--success"
                >
                  校验通过文本提示
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            警告提示
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-size-m t-align-center t-is-warning"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
                <div
                  class="t-input__tips t-input__tips--warning"
                >
                  校验不通过文本提示
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-form__item"
        style="margin-bottom: 0px;"
      >
        <div
          class="t-form__label t-form__label--right"
          style="width: 100px;"
        >
          <label>
            错误提示
          </label>
        </div>
        <div
          class="t-form__controls"
          style="margin-left: 100px;"
        >
          <div
            class="t-form__controls-content"
          >
            <div
              class="t-input-number t-size-m t-input-number--row"
              style="width: 300px;"
            >
              <button
                class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-remove"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M3.5 7.35h9v1.3h-9v-1.3z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
              <div
                class="t-input__wrap"
                value="3"
              >
                <div
                  class="t-input t-size-m t-align-center t-is-error"
                >
                  <input
                    class="t-input__inner"
                    placeholder="请输入"
                    type="text"
                    value="3"
                  />
                </div>
                <div
                  class="t-input__tips t-input__tips--error"
                >
                  校验存在严重问题文本提示
                </div>
              </div>
              <button
                class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
                type="button"
              >
                <svg
                  class="t-icon t-icon-add"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`step.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input__wrap"
      value="3.2"
    >
      <div
        class="t-input t-size-m t-align-center t-is-default"
      >
        <input
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          value="3.2"
        />
      </div>
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
